check_PROGRAMS = cnbdr1 cnbdr2 cnbdr3 cnbdr4 dnbdr1 dnbdr2 dnbdr3 dnbdr4 dnbdr5 dnbdr6 dsbdr1 dsbdr2 dsbdr3 dsbdr4 dsbdr5 dsbdr6 snbdr1 snbdr2 snbdr3 snbdr4 snbdr5 snbdr6 ssbdr1 ssbdr2 ssbdr3 ssbdr4 ssbdr5 ssbdr6 znbdr1 znbdr2 znbdr3 znbdr4


cnbdr1_SOURCES = cnbdr1.f cnband.f

cnbdr1_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)


cnbdr2_SOURCES = cnbdr2.f cnband.f

cnbdr2_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)


cnbdr3_SOURCES = cnbdr3.f cnband.f

cnbdr3_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)


cnbdr4_SOURCES = cnbdr4.f cnband.f

cnbdr4_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)


dnbdr1_SOURCES = dnbdr1.f dnband.f

dnbdr1_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)


dnbdr2_SOURCES = dnbdr2.f dnband.f

dnbdr2_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)


dnbdr3_SOURCES = dnbdr3.f dnband.f

dnbdr3_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)


dnbdr4_SOURCES = dnbdr4.f dnband.f

dnbdr4_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)


dnbdr5_SOURCES = dnbdr5.f dnband.f

dnbdr5_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)


dnbdr6_SOURCES = dnbdr6.f dnband.f

dnbdr6_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)


dsbdr1_SOURCES = dsbdr1.f dsband.f

dsbdr1_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)


dsbdr2_SOURCES = dsbdr2.f dsband.f

dsbdr2_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)


dsbdr3_SOURCES = dsbdr3.f dsband.f

dsbdr3_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)


dsbdr4_SOURCES = dsbdr4.f dsband.f

dsbdr4_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)


dsbdr5_SOURCES = dsbdr5.f dsband.f

dsbdr5_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)


dsbdr6_SOURCES = dsbdr6.f dsband.f

dsbdr6_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)


snband_SOURCES = snband.f

snband_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)


snbdr1_SOURCES = snbdr1.f snband.f

snbdr1_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)


snbdr2_SOURCES = snbdr2.f snband.f

snbdr2_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)


snbdr3_SOURCES = snbdr3.f snband.f

snbdr3_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)


snbdr4_SOURCES = snbdr4.f snband.f

snbdr4_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)


snbdr5_SOURCES = snbdr5.f snband.f

snbdr5_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)


snbdr6_SOURCES = snbdr6.f snband.f

snbdr6_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)


ssbdr1_SOURCES = ssbdr1.f ssband.f

ssbdr1_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)


ssbdr2_SOURCES = ssbdr2.f ssband.f

ssbdr2_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)


ssbdr3_SOURCES = ssbdr3.f ssband.f

ssbdr3_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)


ssbdr4_SOURCES = ssbdr4.f ssband.f

ssbdr4_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)


ssbdr5_SOURCES = ssbdr5.f ssband.f

ssbdr5_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)


ssbdr6_SOURCES = ssbdr6.f ssband.f

ssbdr6_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)


znbdr1_SOURCES = znbdr1.f znband.f

znbdr1_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)


znbdr2_SOURCES = znbdr2.f znband.f

znbdr2_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)


znbdr3_SOURCES = znbdr3.f znband.f

znbdr3_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)


znbdr4_SOURCES = znbdr4.f znband.f

znbdr4_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)

TESTS = cnbdr1 cnbdr2 cnbdr3 cnbdr4 dnbdr1 dnbdr2 dnbdr3 dnbdr4 dnbdr5 dnbdr6 dsbdr1 dsbdr2 dsbdr3 dsbdr4 dsbdr5 dsbdr6 snbdr1 snbdr2 snbdr3 snbdr4 snbdr5 snbdr6 ssbdr1 ssbdr2 ssbdr3 ssbdr4 ssbdr5 ssbdr6 znbdr1 znbdr2 znbdr3 znbdr4
