check_PROGRAMS = cndrv1 cndrv2 cndrv3 cndrv4 zndrv1 zndrv2 zndrv3 zndrv4
cndrv1_SOURCES = cndrv1.f

cndrv1_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)


cndrv2_SOURCES = cndrv2.f

cndrv2_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)


cndrv3_SOURCES = cndrv3.f

cndrv3_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)


cndrv4_SOURCES = cndrv4.f

cndrv4_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)


zndrv1_SOURCES = zndrv1.f

zndrv1_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)


zndrv2_SOURCES = zndrv2.f

zndrv2_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)


zndrv3_SOURCES = zndrv3.f

zndrv3_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)


zndrv4_SOURCES = zndrv4.f

zndrv4_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)

TESTS = cndrv1 cndrv2 cndrv3 cndrv4 zndrv1 zndrv2 zndrv3 zndrv4
