check_PROGRAMS = dndrv1 dndrv2 dndrv3 dndrv4 dndrv5 dndrv6 sndrv1 sndrv2 sndrv3 sndrv4 sndrv5 sndrv6

dndrv1_SOURCES = dndrv1.f

dndrv1_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)


dndrv2_SOURCES = dndrv2.f

dndrv2_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)


dndrv3_SOURCES = dndrv3.f

dndrv3_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)


dndrv4_SOURCES = dndrv4.f

dndrv4_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)


dndrv5_SOURCES = dndrv5.f

dndrv5_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)


dndrv6_SOURCES = dndrv6.f

dndrv6_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)


sndrv1_SOURCES = sndrv1.f

sndrv1_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)


sndrv2_SOURCES = sndrv2.f

sndrv2_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)


sndrv3_SOURCES = sndrv3.f

sndrv3_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)


sndrv4_SOURCES = sndrv4.f

sndrv4_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)


sndrv5_SOURCES = sndrv5.f

sndrv5_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)


sndrv6_SOURCES = sndrv6.f

sndrv6_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)

TESTS = dndrv1 dndrv2 dndrv3 dndrv4 dndrv5 dndrv6 sndrv1 sndrv2 sndrv3 sndrv4 sndrv5 sndrv6
