check_PROGRAMS = dsdrv1 dsdrv2 dsdrv3 dsdrv4 dsdrv5 dsdrv6 ssdrv1 ssdrv2 ssdrv3 ssdrv4 ssdrv5 ssdrv6

dsdrv1_SOURCES = dsdrv1.f

dsdrv1_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)


dsdrv2_SOURCES = dsdrv2.f

dsdrv2_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)


dsdrv3_SOURCES = dsdrv3.f

dsdrv3_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)


dsdrv4_SOURCES = dsdrv4.f

dsdrv4_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)


dsdrv5_SOURCES = dsdrv5.f

dsdrv5_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)


dsdrv6_SOURCES = dsdrv6.f

dsdrv6_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)


ssdrv1_SOURCES = ssdrv1.f

ssdrv1_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)


ssdrv2_SOURCES = ssdrv2.f

ssdrv2_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)


ssdrv3_SOURCES = ssdrv3.f

ssdrv3_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)


ssdrv4_SOURCES = ssdrv4.f

ssdrv4_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)


ssdrv5_SOURCES = ssdrv5.f

ssdrv5_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)


ssdrv6_SOURCES = ssdrv6.f

ssdrv6_LDADD=../../libarpack.la $(BLAS_LIBS) $(LAPACK_LIBS)

TESTS = dsdrv1 dsdrv2 dsdrv3 dsdrv4 dsdrv5 dsdrv6 ssdrv1 ssdrv2 ssdrv3 ssdrv4 ssdrv5 ssdrv6
