noinst_LTLIBRARIES = libparpacksrc.la
libparpacksrc_la_SOURCES = \
pcgetv0.f  pdlamch.f  pdsaitr.f   pslamch.f  pssaitr.f  pznapps.f \
pclarnv.f  pdlarnv.f  pdsapps.f   pslarnv.f  pssapps.f  pznaup2.f \
pcnaitr.f  pdnaitr.f  pdsaup2.f   psnaitr.f  pssaup2.f  pznaupd.f \
pcnapps.f  pdnapps.f  pdsaupd.f   psnapps.f  pssaupd.f  pzneigh.f \
pcnaup2.f  pdnaup2.f  pdseigt.f   psnaup2.f  psseigt.f  pzneupd.f \
pcnaupd.f  pdnaupd.f  pdseupd.f   psnaupd.f  psseupd.f  pzngets.f 
pcneigh.f  pdneigh.f  pdsgets.f   psneigh.f  pssgets.f  \
pcneupd.f  pdneupd.f  pdznorm2.f  psneupd.f  pzgetv0.f  \
pcngets.f  pdngets.f  pscnorm2.f  psngets.f  pzlarnv.f  \
pdgetv0.f  pdnorm2.f  psgetv0.f   psnorm2.f  pznaitr.f

EXTRA_DIST = debug.h stat.h